--- a/overlays/donationticker.html
+++ b/overlays/donationticker.html
@@ -7,6 +7,11 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/webfont/1.6.28/webfontloader.js"></script>
         <script src="overlayutil.js"></script>
+        <style>
+            body {
+                text-shadow: 1.5px 1.5px rgba(0, 0, 0, 0.3);
+            }
+        </style>
     </head>
 
     <body>
@@ -34,7 +39,7 @@
                 config = data;
 
                 overlay.changeFont(config.font);
-                document.querySelector("#amount").style = "color: " + config.text_color + ";";
+                document.querySelector("#amount").style = "color: " + config.text_color + "; font-size: " + config.font_size + "px;";
 
                 update();
             });
