--- a/overlays/follower.html
+++ b/overlays/follower.html
@@ -10,7 +10,8 @@
 
             .center {
                 margin: auto;
-                width: 60%;
+                width: 100vw;
+                height: 100vh;
                 text-align: center;
                 padding: 10px;
             }
@@ -19,16 +20,16 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                max-height: 50vh;
-                max-width: 90vw;
+                max-height: 75vh;
+                max-width: 100vw;
             }
 
             video {
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                max-height: 50vh;
-                max-width: 90vw;
+                max-height: 75vh;
+                max-width: 100vw;
             }
 
             #event {
