--- a/overlays/donation.html
+++ b/overlays/donation.html
@@ -102,26 +102,31 @@
                 let displayTime = DISPLAY_TIME;
                 let event = queue[0];
 
-                if (!config.use_donation_image) {
-                    if (files.image_file) {
-                        if (files.image_file.startsWith("data:video")) {
+                video.classList = "hide";
+                img.classList = "hide";
+
+                switch (config.image) {
+                    case "Custom Image": {
+                        if (!files.image_file) {
+                            break;
+                        } else if (files.image_file.startsWith("data:video")) {
                             video.src = files.image_file;
                             video.play();
                             video.classList = "";
                             video.addEventListener("loadeddata", () => {
                                 displayTime = video.duration * 1000;
                             });
-                            img.classList = "hide";
                         } else {
-                            video.classList = "hide";
                             img.classList = "";
                             img.src = files.image_file;
                         }
-                    } else {
-                        img.src = "data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==";
+                        break;
                     }
-                } else {
-                    img.src = event.image;
+                    case "Donation Image": {
+                        img.src = event.image;
+                        img.classList = ""; break;
+                    }
+                    case "None": break;
                 }
 
                 text.innerText = event.message;
@@ -129,8 +134,10 @@
                 user.innerText = event.sender.username;
                 user.style = "color: " + event.sender.color + ";";
 
-                if (config.enable_audio) {
-                    playAudio();
+                switch (config.audio) {
+                    case "Custom Audio": playAudio(); break;
+                    case "Text To Speech": playTTS(event.message); break;
+                    case "None": break;
                 }
 
                 displayTime -= (FADE_TIME * 2);
@@ -156,6 +163,17 @@
                         }
                     });
                 });
+            }
+
+            function playTTS(text) {
+                try {
+                    audio = new Audio("https://api.casterlabs.co/v1/polly?voice=" + config.text_to_speech_voice + "&text=" + text);
+
+                    audio.volume = config.volume;
+                    audio.play();
+                } catch (e) {
+                    audio = {};
+                }
             }
 
             function playAudio() {
