--- a/app/index.html
+++ b/app/index.html
@@ -128,6 +128,7 @@
 
     <footer>
         <script src="js/util.js"></script>
+        <script src="js/currencies.js"></script>
         <script src="js/forms.js"></script>
         <script src="js/fontselect.js"></script>
         <script src="js/koi.js"></script>
