--- a/overlays/info.html
+++ b/overlays/info.html
@@ -18,20 +18,7 @@
     <footer>
         <script>
             const overlay = new OverlayUtil("casterlabs_info");
-            const formatter = new Intl.NumberFormat("en-US", {
-                style: "currency",
-                currency: "USD",
-                minimumFractionDigits: 2
-            });
             let config = null;
-
-            function formatUSD(amount) {
-                let formatted = formatter.format(amount);
-
-                return formatted.replace(".00", ""); // "Round" to the dollar.
-            }
-
-            document.querySelector("#font").href = vars.font;
 
             overlay.on("config", (data) => {
                 config = data;
@@ -53,12 +40,7 @@
                             amount.innerText = "";
                         } else {
                             user.innerText = event.sender.username;
-
-                            if (config.currency == "USD") {
-                                amount.innerText = formatUSD(event.usd_equivalent);
-                            } else {
-                                amount.innerText = event.formatted;
-                            }
+                            amount.innerText = event.currency_info.formatted;
                         }
                     } else {
                         user.innerText = "";
