--- a/overlays/chat.html
+++ b/overlays/chat.html
@@ -71,7 +71,7 @@
 
                     switch (config.chat_animation) {
                         case "Slide": animateSlide(div); break;
-                        case "Disappearing": animateSlide(div); break;
+                        case "Disappearing": disappear(div); break;
                     }
 
                     if (config.text_align == "Right") {
