--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,9 @@
             <a class="close" title="Close">
                 <ion-icon name="close"></ion-icon>
             </a>
+            <a class="minimize" title="Minimize">
+                <ion-icon src="media/minimize.svg"></ion-icon>
+            </a>
         </div>
         <div id="splash" style="opacity: 1;">
             <img src="media/app_icon.png" class="app-icon" />
@@ -119,9 +122,6 @@
             </span>
             <span class="reconnecting" style="opacity: 0;">
                 Reconnecting to Koi.
-            </span>
-            <span class="loading-fonts" style="opacity: 0;">
-                Loading fonts.
             </span>
         </div>
     </body>
