--- a/app/index.html
+++ b/app/index.html
@@ -183,6 +183,9 @@
             navigate("settings");
             CAFFEINATED.init();
 
+            // This will be replaced with an event fire.
+            // e.g element.addEventListener("altclick", (e) => {})
+            /*
             const contextMenu = require('electron-context-menu');
             contextMenu({
                 prepend: (defaultActions, params, browserWindow) => [
@@ -204,6 +207,7 @@
                     }
                 ]
             });
+            */
         </script>
     </footer>
 
