Make the splashscreen less funky

--- a/app/index.html
+++ b/app/index.html
@@ -80,15 +80,7 @@
                 <div class="bounce2"></div>
                 <div class="bounce3"></div>
             </div>
-            <span class="problems" style="opacity: 0;">
-                Having problems?
-                <a onclick="openLink('https:\/\/twitter.com/casterlabs');">
-                    Tweet at us.
-                </a>
-            </span>
-            <span class="reconnecting" style="opacity: 0;">
-                Reconnecting to Koi.
-            </span>
+            <span class="splash-message" style="opacity: 0;"></span>
         </div>
         <div class="title-bar">
             <div class="title-bar-title"><img src="media/app_icon.png">Caffeinated</div>
