Begin work on a rich content editor. (See desc)
The editor works properly, however there's an issue where clicked toolbar items will immeadiately hide. The temporary solution is to right click the item instead.

--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,15 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/cyborg/bulmaswatch.min.css" />
+        <link rel="stylesheet" href="https://cdn.quilljs.com/1.3.6/quill.snow.css" />
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/selectnsearch.css" />
+        <link rel="stylesheet" href="css/quill.css" />
         <title>Casterlabs Caffeinated</title>
         <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.0/lib/anime.min.js"></script>
         <script type="module" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.esm.js"></script>
         <script nomodule="" src="https://unpkg.com/ionicons@5.2.3/dist/ionicons/ionicons.js"></script>
+        <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
         <style>
             /* https://tobiasahlin.com/spinkit/ */
             .spinner {
@@ -165,6 +168,7 @@
         <script src="js/selectnsearch.js"></script>
         <script src="js/forms.js"></script>
         <script src="js/fontselect.js"></script>
+        <script src="js/quillutil.js"></script>
         <script src="js/koi.js"></script>
         <script src="js/navigate.js"></script>
         <script src="js/modules.js"></script>
